test/integration/bad/new/variable-decl-bad-8.stan
data { row_vector<multiplier=x>[10] print(0);}